# vex-rag

./: .gitignore  CHANGELOG.md  PLUGIN-STATUS.md  README.md  pyproject.toml  requirements-core.txt  requirements.txt
.claude-plugin/: plugin.json
.claude-plugin/commands/: index.md  search.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude.yml
agents/: rag-maintenance.md
cli/: vex-index  vex-search
commands/: index.md  search.md
examples/: config.athena.yml  config.ir.yml  config.pai.yml  config.pentest.yml
hooks/: post-commit.sh
mcp_server/: ok_rag_server.py  vex_kb_server.py
observability-scripts/: install-observability.sh  log-latency-trace.sh  log-token-usage.sh  vex-error-report.sh  vex-health-check.sh  vex-latency-report.sh  vex-log-error.sh  vex-token-report.sh
rag/: __init__.py
rag/cli/: index.py  search.py  vacuum.py
rag/indexing/: __init__.py  chunker.py  context_generator.py  document_loader.py  embedder.py  indexer.py  rag_security.py  sanitizer.py
rag/notifications/: __init__.py  composite.py  console.py  factory.py  interface.py  models.py  null.py  webhook.py
rag/retrieval/: __init__.py  bm25_search.py  fusion.py  pipeline.py  reranker.py  vector_search.py
rag/utils/: observability.py
tests/: test_context_generator.py  test_embedder_timeout.py  test_hash_first_dedup.py  test_model_availability_check.py  test_notifications.py  test_sync_client_close.py  test_vacuum_cli.py  test_vacuum_orphans.py
tests/security/: test_path_traversal.py  test_sql_injection.py
