[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vex-rag"
version = "1.0.1"
description = "100% local RAG system with hybrid search, contextual chunking, and BGE reranking"
authors = [
    {name = "Kelvin Lomboy", email = "kelvin@lomboy.email"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "lancedb>=0.5.0",
    "sentence-transformers>=2.2.2",
    "ollama>=0.1.0",
    "fastmcp>=0.3.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.7.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "rank-bm25>=0.2.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285"
]

[project.scripts]
vex-search = "rag.cli.search:main"
vex-index = "rag.cli.index:main"
vex-rag = "rag.cli.main:main"

[project.urls]
Homepage = "https://github.com/0K-cool/vex-rag"
Documentation = "https://github.com/0K-cool/vex-rag/blob/main/README.md"
Repository = "https://github.com/0K-cool/vex-rag"
Issues = "https://github.com/0K-cool/vex-rag/issues"

[tool.setuptools]
packages = ["rag", "rag.indexing", "rag.retrieval", "rag.utils", "rag.cli"]
